--- a/src/app/user/my-bookings/my-bookings.html
+++ b/src/app/user/my-bookings/my-bookings.html
@@ -1,5 +1,5 @@
 <div class="my-bookings-page">
-   <div class="container-fluid">
+   <div class="container-fluid w-75">
       <h1 class="page-title">My Bookings</h1>
 
       <div class="filter-section">
