--- a/src/app/ticket-page/ticket-buy/ticket-buy.html
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.html
@@ -148,7 +148,7 @@
             </button>
             } @else {
             <div class="empty-cart">
-               <p>Your cart is empty</p>
+               <p class="pb-3">Your cart is empty</p>
                <p class="hint">Add tickets from the left to get started</p>
             </div>
             }
