bug on ticket page, fixed a bit

--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -5,7 +5,7 @@
          <div class="col-sm-4 col-md-12 col-xxl-3 title-wrap">
             <div class="title">
                <h3>CONCERT TICKET</h3>
-            </div>HOME
+            </div>
          </div>
 
          <!-- list navbar, search bar, login -->
