--- a/src/app/ticket-page/ticket-buy/ticket-buy.html
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.html
@@ -22,7 +22,7 @@
             </aside>
          </div>
 
-         <div class="col-lg-6 col-md-12">
+         <div class="col-lg-6 col-md-12 padding-description">
             <div class="right">
                <h2 class="title">{{ event.title }}</h2>
                <p class="desc">{{ event.description }}</p>
@@ -47,7 +47,7 @@
       </div>
 
       <div class="row mt-4 mb-5">
-         <div class="col-lg-6">
+         <div class="col-xl-6 col-lg-12">
             <div class="tickets-list">
                <h3>Available Tickets</h3>
 
@@ -96,7 +96,7 @@
             </div>
          </div>
 
-         <div class="col-lg-6 text-white">
+         <div class="col-xl-6 col-md-12 text-white p-5 d-flex align-items-start justify-content-center">
             <div class="shopping-cart-section">
                <h3 class="text-white">🛒 Shopping Cart</h3>
                @if (cart.length > 0) {
@@ -138,7 +138,7 @@
                </button>
                } @else {
                <div class="empty-cart">
-                  <p>Your cart is empty</p>
+                  <p class="pb-3">Your cart is empty</p>
                   <p class="hint">Add tickets from the left to get started</p>
                </div>
                }
